<resources>
    <string name="app_name">Lesson_01</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="checkbox">CheckBox</string>
    <string name="button">Button</string>
    <string name="plaintext">PlainText</string>
    <string name="textview">textView</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="button_switsh">Кнопка, которая дёргает Switch</string>
    <string name="switch_checkbox">Switch, который дёргает CheckBox</string>
    <string name="heckbox_tooglebutton">Сheckbox, который дёргает ToogleButton</string>
    <string name="toggleBtn1">Туда</string>
    <string name="toggleBtn2">Сюда</string>
    <string name="todo">TODO</string>
</resources>